[package]
name = "catch"
version = "0.1.3"
edition = "2021"
description = "Rust-based reverse shell listener offering enhanced operational features."
authors = ["jazzpizazz"]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
crossterm = "0.27.0"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tui = "0.19.0"
